# PoseidonML

./: LICENSE  pyproject.toml
Data/Deviation Surveys/: Boreas 1.deviation  Kronos 1.deviation  Pharos 1.deviation  Poseidon 1.deviation  Poseidon 2.deviation  Poseidon North 1.deviation  Proteus 1.deviation  Proteus 1ST1.deviation  Proteus 1ST2.deviation  Torosa 1.deviation
Notebooks/Poseidon/: 01_WellIngestion.ipynb
Notebooks/Tutorials/: Facies Classification - SVM.ipynb
