[project]
name = "PoseidonML"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "welly"
]

[tool.uv.sources]
welly = { git = "https://github.com/agilescientific/welly", rev = "6ed78b5" }

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pip>=25.2",
]
